# Snake

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile
.github/workflows/: cpp.yml
cmake/: Utils.cmake
include/: Assert.h  Types.h
include/Log/: Log.h  Timer.h
include/Lua/: MyLua.h
include/Lua/sol/: config.hpp  forward.hpp  sol.hpp
include/MyMath/: MyMatrix.h  MyVectors.h
include/cereal/: MyCereal.h
include/entt/: entt.h
include/rlImGui/: rlImGui.h
src/: Components.h  FirstScene.cpp  FirstScene.h  Grid.cpp  Grid.h  Snake.cpp  Snake.h  main.cpp
src/Engine/: Components.h  Context.h  Game.cpp  Game.h  Logger.h  LuaManager.cpp  LuaManager.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h
src/MyRaylib/: MyRaylib.cpp  MyRaylib.h
